Sistema beta en funcionamiento

--- a/src/main/resources/templates/user/template_user.html
+++ b/src/main/resources/templates/user/template_user.html
@@ -4,7 +4,7 @@
     <div class="container">
         <a class="navbar-brand" th:href="@{/home}">Spring eCommerce</a>
 
-        <form class="form-inline my-2 my-lg-0" method="post"
+        <form class="form-inline my-2 my-lg-0" method="get"
               action="#">
             <input class="form-control mr-sm-2" type="search"
                    placeholder="Buscar" aria-label="Search" name="nombre"
@@ -32,7 +32,7 @@
         <div class="container">
             <a class="navbar-brand" th:href="@{/home}">Spring eCommerce</a>
 
-            <form class="form-inline my-2 my-lg-0" method="post"
+            <form class="form-inline my-2 my-lg-0" method="get"
                   action="#">
                 <input class="form-control mr-sm-2" type="search"
                        placeholder="Buscar" aria-label="Search" name="nombre"
